Bug 1102135 - When select word, bailed out if frame is not selectable. r=roc