layout/base/SelectionCarets.cpp
@@ -565,6 +565,12 @@ SelectionCarets::SelectWord()
     return NS_OK;
   }
 
+  bool selectable;
+  ptFrame->IsSelectable(&selectable, nullptr);
+  if (!selectable) {
+    return NS_OK;
+  }
+
   nsPoint ptInFrame = mDownPoint;
   nsLayoutUtils::TransformPoint(rootFrame, ptFrame, ptInFrame);
 
